; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_malloc_hook.c_memalign.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_malloc_hook.c_memalign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PREFIX_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @skynet_memalign(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @PREFIX_SIZE, align 8
  %9 = add i64 %7, %8
  %10 = call i8* @je_memalign(i64 %6, i64 %9)
  store i8* %10, i8** %5, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %2
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @malloc_oom(i64 %14)
  br label %16

16:                                               ; preds = %13, %2
  %17 = load i8*, i8** %5, align 8
  %18 = call i8* @fill_prefix(i8* %17)
  ret i8* %18
}

declare dso_local i8* @je_memalign(i64, i64) #1

declare dso_local i32 @malloc_oom(i64) #1

declare dso_local i8* @fill_prefix(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
